BZ 1069606 - this allows the build to complete if the jboss.version is set to the EAP 6.3.Alpha version string ("7.4.0.Final-redhat-4").
However, this requires that the root pom define a mvn repository that has that version of the org/jboss/as/jboss-as-dist artifact (which today does not exist on any public repo).